# NAC

./: README.md  gala.py  leinster.py  pyproject.toml
data/: Availability-NAC-Gala-09Feb2025.csv  Availability-NAC-Gala-13Oct2024_old.csv  EventSignup-NAC-Gala-09Feb2025.csv  EventSignup-NAC-Gala-13Oct2024.csv  session1.json  session2.json
data/13Oct2024/: Availability-NAC-Gala-13Oct2024.csv  session1.json  session2.json
